# Galene

./: .gitignore  .gitmodules  CreateCompositeMovie.m  LICENCE.txt  LICENSE-3RD-PARTY.txt  PlotResults.m  PlotSimulatedResults.m  README.md  ReadPointFile.m  ReadTifStack.m  RebinStack.m  SimulationResults.m  TestMerging.m  azure-pipelines.yaml  build-flim-ui.bat  build-flim-ui.sh  build-libs.bat  build-libs.sh  create-dmg.sh  fix_mac_qt.sh  install-cuda.ps1  sign-installer.bat  tight_subplot.m
Assets/: appdmg.json
Matlab/: AddScaleBar.m  AnimateFitting.m  AnimateScan.m  CreateCompositeMovie.m  ExtractRecovery.m  GetPointsFromLeicaRoiFile.m  IntensityMerge.m  MeanArrivalToLifetime.m  PlotResults.m  PlotSimulatedResults.m  ProcessFrap.m  ReadDbufferFile.m  ReadPointFile.m  ReadTifStack.m  RealignmentExample.m  SetupDatasets.m  ShowFLIM.m  ShowIntensityMergedSimulations.m  SimulationComparison.m  SimulationResults.m  nancorr2.m  parseXML.m
Source/: CMakeLists.txt  CMakeSettings.json
Source/Galene/: BioImageIntensityReader.cpp  CMakeLists.txt  Galene.manifest  ImarisIntensityWriter.h  IntensityDataSource.cpp  IntensityDataSource.h  IntensityReader.h  Main.cpp  OmeIntensityWriter.cpp  RealignmentDisplayWidget.h  RealignmentDisplayWidget.ui  RealignmentResultsWriter.cpp  RealignmentStudio.cpp  RealignmentStudio.h  RealignmentStudio.ui  RealignmentStudioBatchProcessor.cpp  RealignmentStudioBatchProcessor.h  icon.rc  spectralcorrectionlistmodel.h
Source/arduino/microsecond-flim-trigger/: TC_Helper.ino  microsecond-flim-trigger.ino
Source/arduino/sync-multiplexer/: sync-multiplexer.ino
Source/cmake/: DeployQt.cmake  GitVersion.cmake  TargetAppleSdk.cmake
Source/cmake/Hunter/: config.cmake
Source/cmake/Modules/: FindBoost.cmake  NSIS.template.in
Source/common-ui/: CMakeLists.txt  FlimDataSource.cpp  FlimDataSource.h  FlimReaderDataSource.cpp  FlimReaderDataSource.h  FlimWorkspace.cpp  FlimWorkspace.h  LifetimeDisplayWidget.cpp  LifetimeDisplayWidget.h  LifetimeDisplayWidget.ui  RealignableDataSource.cpp  RealignableDataSource.h  RealignmentParametersWidget.cpp  RealignmentParametersWidget.h  RealignmentParametersWidget.ui  RealignmentResultsWriter.h  UiUtils.cpp  UiUtils.h
Source/flim-ui/: BHRatesWidget.h  BHRatesWidget.ui  BioImageIntensityReader.cpp  BioImageIntensityReader.h  BioformatsExporter.cpp  BioformatsExporter.h  CMakeLists.txt  CronologicControlDisplay.cpp  CronologicControlDisplay.h  FifoTcspcControlDisplayFactory.h  FlimDataSource.cpp  FlimDisplay.cpp  FlimDisplay.h  FlimDisplay.ui  FlimReaderDataSource.cpp  FlimReaderDataSource.h  FlimServer.cpp  FlimServer.h  FlimServerInterface.h  FlimStatusWidget.cpp  FlimStatusWidget.h  FlimWorkspace.cpp  FlimWorkspace.h  HighPerformanceTimer.h  IcsIntensityReader.cpp  IcsIntensityReader.h  ImarisIntensityReader.cpp  ImarisIntensityReader.h  ImarisIntensityWriter.cpp  ImarisIntensityWriter.h  Info.plist.in  IntensityDataSource.cpp  IntensityDataSource.h  IntensityReader.cpp  IntensityReader.h  IntensityWriter.cpp  IntensityWriter.h  LifetimeDisplayWidget.cpp  LifetimeDisplayWidget.h  LifetimeDisplayWidget.ui  (+32 more)
Source/flim-ui/cmake/: DeployQt.cmake  macdeployqtfix.py
Source/flim-ui/cmake/Modules/: FindBioImage.cmake
arduino/microsecond-flim-trigger/: SerialHelpers.ino  microsecond-flim-trigger.ino
lib/: CMakeLists.txt  bioimageconvert.patch
